# rust-rcloud

./: .gitignore  Cargo.toml  README.md  TODO.md  dist-workspace.toml  sonar-project.properties
.github/workflows/: release.yml  sonar.yml  tags.yml  version.yml
assets/: default_config.toml
src/: lib.rs  main.rs
src/cli/: context.rs  macros.rs  mod.rs  parser.rs  run.rs
src/cli/commands/: mod.rs  remote.rs
src/cli/commands/configure/: setup.rs
src/cli/commands/configure/handlers/: setup.rs
src/cli/commands/path/: command.rs
src/cli/commands/path/handlers/: add.rs  list.rs  remove.rs
src/cli/commands/path/utils/: hooks.rs  mod.rs  path.rs  tags.rs
src/cli/commands/registry/: command.rs
src/cli/commands/registry/handlers/: edit.rs
src/cli/commands/remote/: command.rs  mod.rs
src/cli/commands/remote/handlers/: add.rs  list.rs  ls.rs  mod.rs  remove.rs  update.rs
src/cli/commands/remote/utils/: remote.rs
src/cli/commands/sync/: command.rs  mod.rs
src/cli/commands/sync/handlers/: all.rs  all_sync.rs  mod.rs  path_sync.rs  single.rs
src/cli/commands/sync/utils/: compute_remote_filename.rs  execute_hooks.rs  execute_rclone.rs  mod.rs  options.rs  pull.rs  push.rs
src/config/: app.rs  config.json  config_loader.rs  hook_config.rs  mod.rs  path_config.rs  prelude.rs  registry.rs  remote.rs  schema.rs  tags.rs
src/config/hooks/: backup.rs  hook_builder.rs  mod.rs  zip.rs
src/hooks/: hook_builder.rs  hook_context.rs  macros.rs  mod.rs  prelude.rs
src/hooks/backup/: backup_hook.rs  config.rs  hook.rs  mod.rs
src/hooks/backup/utils/: create_local_backup.rs  create_remote_backup.rs  get_local_replicas.rs  get_remote_replicas.rs  mod.rs  parse_replica.rs  rotate_local_replicas.rs  rotate_remote_replicas.rs
src/hooks/zip/: config.rs  hook.rs  mod.rs  zip_hook.rs
src/tui/: commands.rs  execute.rs  menu.rs  mod.rs  run.rs
src/tui/utils/: mod.rs  prelude.rs  tree.rs
src/tui/widgets/: mod.rs  tree_menu.rs
src/utils/: config_path.rs  directories.rs  file.rs  hash.rs  logger.rs  macros.rs  mod.rs  path.rs  prelude.rs
tests/config/hooks/: mod.rs  zip_test.rs
tests/hooks/: zip_test.rs
wix/: main.wxs
