[package]
name = "rcloud"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive", "env"] }
console = "0.16.1"
dotenvy = "0.15.7"
fs2 = "0.4.3"
globset = "0.4.18"
inquire = "0.9.1"
lazy_static = "1.5.0"
paste = "1.0.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = "1.48.0"
transaction = "0.2.1"
uuid = { version = "1.16.0", features = ["v4"] }
walkdir = "2.5.0"
zip = { version = "6.0.0", features = ["deflate-flate2"] }
