[package]
name = "rcloud"
authors = ["MauroGonzalez51"]
license = "MIT"
description = "CLI wrapper for rclone"
homepage = "https://github.com/MauroGonzalez51/rust-rcloud"
repository = "https://github.com/MauroGonzalez51/rust-rcloud"
version = "0.2.7"
edition = "2024"

[package.metadata.wix]
upgrade-guid = "CE055E31-7C00-4FFC-BAA5-3F957EA43CC1"
path-guid = "BE5DAE80-C464-4074-9FC8-BA35A8B28045"
license = false
eula = false

[lib]
name = "rcloud"
path = "src/lib.rs"

[[bin]]
name = "rcloud"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive", "env"] }
console = "0.16.1"
dotenvy = "0.15.7"
fs2 = "0.4.3"
fs_extra = "1.3.0"
globset = "0.4.18"
inquire = "0.9.1"
inquire-derive = "0.9.1"
lazy_static = "1.5.0"
paste = "1.0.15"
regex = "1.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
shellexpand = "3.1.1"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = "1.48.0"
transaction = "0.2.1"
uuid = { version = "1.16.0", features = ["v4"] }
walkdir = "2.5.0"
zip = { version = "6.0.0", features = ["deflate-flate2", "zstd"] }

[dev-dependencies]
assert_fs = "1.1.3"
predicates = "3.1.3"

[profile.dist]
inherits = "release"
lto = "thin"
